@@ -59,8 +59,7 @@
     <string name="BookmarksListActivity.RecentSortMode">Most recent</string>
     <string name="BookmarksListActivity.ImportSource">Choose the import source</string>
     <string name="BookmarksListActivity.AndroidImportSource">Android browser bookmarks</string>
-    <string name="BookmarksListActivity.ExportDialogTitle">Bookmarks export</string>
-    <string name="BookmarksListActivity.ExportDialogMessage">Bookmarks will be exported to %s.</string>
+    <string name="BookmarksListActivity.ExportDialogTitle">Bookmarks export</string>    
     
     <string name="EditBookmarkActivity.Title">Edit bookmark</string>
     <string name="EditBookmarkActivity.TitleAdd">Add bookmark</string>
@@ -283,5 +282,7 @@
         <item>@string/PreferencesActivity.UserAgentDesktop</item>
         <item>@string/PreferencesActivity.UserAgentCustom</item>
     </string-array>
+    
+    <string name="BookmarksListActivity.AndroidExportTarget">Android browser bookmarks</string>
     
 </resources>
